<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pass_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dd000000"
    android:gravity="center_horizontal"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_medal"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/pass_title1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="20.2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/pass_title2"
            />

        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans_correct"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/game_level_title"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/pass_stage_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        </FrameLayout>
    <TextView
        android:id="@+id/pass_stage_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/game_coin_icon"
            android:layout_marginTop="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/multi_symbol"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@integer/pass_reward"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        </LinearLayout>
    <ImageButton
        android:id="@+id/btn_next_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_stage_btn"
        android:layout_marginTop="40dp"
        />
    <ImageButton
        android:id="@+id/btn_share_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stage_share_btn"
        android:layout_marginTop="10dp"
        />
</LinearLayout>